--- a/app/views/mangas/_form.html.erb
+++ b/app/views/mangas/_form.html.erb
@@ -1,17 +1,88 @@
-<%= form_with(model: manga) do |form| %>
-  <% if manga.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(manga.errors.count, "error") %> prohibited this manga from being saved:</h2>
+<%= form_with model: manga, local: true do |f| %>
+  <div class="form-group">
+    <%= f.label :title, "Title" %>
+    <%= f.text_field :title, class: "form-control", required: true %>
+  </div>
 
-      <ul>
-        <% manga.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <div class="form-group">
+    <%= f.label :alternative_title, "Alternative Title" %>
+    <%= f.text_field :alternative_title, class: "form-control" %>
+  </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="form-group">
+    <%= f.label :image_cover, "Image Cover" %>
+    <%= f.text_field :image_cover, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :status, "Status" %>
+    <%= f.select :status, ["Ongoing", "Completed", "Hiatus", "Dropped"], {}, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :series, "Series" %>
+    <%= f.text_field :series, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :author, "Author" %>
+    <%= f.text_field :author, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :rating, "Rating" %>
+    <%= f.number_field :rating, step: 0.1, min: 0, max: 10, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :created_date, "Created Date" %>
+    <%= f.date_select :created_date, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :genre, "Genre" %>
+    <%= f.text_field :genre, placeholder: "Separated by commas", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :chapter, "Chapter" %>
+    <%= f.number_field :chapter, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :image, "Manga Images" %>
+    <%= f.text_field :image, placeholder: "Separated by commas", class: "form-control" %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.submit "Save", class: "btn btn-primary" %>
+    <%= link_to "Cancel", mangas_path, class: "btn btn-secondary" %>
   </div>
 <% end %>
+
+<style>
+  .form-group {
+    margin-bottom: 15px;
+  }
+
+  .form-control {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+
+  .form-actions {
+    margin-top: 15px;
+  }
+
+  .btn {
+    padding: 8px 12px;
+    text-decoration: none;
+    border-radius: 3px;
+    display: inline-block;
+  }
+
+  .btn-primary { background-color: blue; color: white; }
+  .btn-secondary { background-color: gray; color: white; }
+</style>
