--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -4,7 +4,7 @@
   <h1><%= @manga.title %></h1>
   <p><strong>Alternative Title:</strong> <%= @manga.alternative_title %></p>
   <p><strong>Status:</strong> <%= @manga.status %></p>
-  <p><strong>Type:</strong> <%= @manga.type %></p>
+  <p><strong>Type:</strong> <%= @manga.manga_type %></p>
   <p><strong>Series:</strong> <%= @manga.series %></p>
   <p><strong>Author:</strong> <%= @manga.author %></p>
   <p><strong>Rating:</strong> <%= @manga.rating %></p>
