table chapter every manga

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 <nav class="navbar bg-transparent" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="<%= root_path %>">
-      <h1 class="fa-solid">whdzera</h1>
+      <h1 class="fa-solid">KitsuManga</h1>
     </a>
 
       <!-- Search Bar -->
@@ -107,6 +107,7 @@
 
 <footer class="footer bg-transparent">
   <div class="content has-text-centered">
+    <p> &copy; <%= Time.now.year %> KitsuManga</p>
     <p>
       <strong>Code</strong> by <a href="https://github.com/rokhimin">Rokhimin</a>.
     </p>
