build homepage & listing popular manga

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,14 @@
     </a>
   </div>
 
+  <div class="navbar-item">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/manga">
+        Manga
+      </a>
+    </div>
+  </div>
+
   <div id="navbar-menu" class="navbar-menu bg-full-transparent">
       
     <div class="navbar-end bg-full-transparent">
