--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,8 +49,13 @@ body {
   );
 }
 
+
 .bg-transparent {
   background-color: rgba(0, 0, 0, 0.36);
+}
+
+.bg-semi-transparent {
+  background-color: rgba(0, 0, 0, 0.555);
 }
 
 .bg-full-transparent {
