--- a/app/views/mangas/edit.html.erb
+++ b/app/views/mangas/edit.html.erb
@@ -3,10 +3,64 @@
 <h1>Editing Manga</h1>
 
 <div class="manga-edit-form">
-  <%= render "form", manga: @manga %>
+  <%= form_with(model: @manga, local: true) do |f| %>
+    <div class="field">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :alternative_title %>
+      <%= f.text_field :alternative_title, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :image_cover, "Image Cover URL" %>
+      <%= f.text_field :image_cover, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :status %>
+      <%= f.select :status, ["Ongoing", "Completed"], {}, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :manga_type, "Manga Type" %>
+      <%= f.text_field :manga_type, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :series %>
+      <%= f.text_field :series, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :author %>
+      <%= f.text_field :author, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :rating %>
+      <%= f.number_field :rating, step: 0.1, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :created_date %>
+      <%= f.date_field :created_date, class: "input" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :genre %>
+      <%= f.text_field :genre, placeholder: "Comma separated (e.g., Action, Fantasy)", class: "input" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Update Manga", class: "button is-primary" %>
+    </div>
+  <% end %>
 </div>
 
 <div class="manga-links">
-  <%= link_to "Show this manga", @manga, class: "btn btn-primary" %>
-  <%= link_to "Back to mangas", mangas_path, class: "btn btn-secondary" %>
+  <%= link_to "Show this manga", @manga, class: "button is-link" %>
+  <%= link_to "Back to mangas", mangas_path, class: "button is-light" %>
 </div>
