--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,31 @@
 
   <div class="navbar-item">
     <div class="navbar-start">
-      <a class="navbar-item" href="/manga">
-        Manga
-      </a>
+      <a class="navbar-item" href="/manga">Latest Updated</a>
+    </div>
+  </div>
+
+  <div class="navbar-item">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/manga">List Manga</a>
+    </div>
+  </div>
+
+  <div class="navbar-item">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/manga">Type</a>
+    </div>
+  </div>
+
+  <div class="navbar-item">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/manga">Genre</a>
+    </div>
+  </div>
+
+  <div class="navbar-item">
+    <div class="navbar-start">
+      <a class="navbar-item" href="/manga">Community</a>
     </div>
   </div>
 
