--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 
   <div class="navbar-item">
     <div class="navbar-start">
-      <a class="navbar-item" href="/manga">Latest Updated</a>
+      <a class="navbar-item" href="/manga">Latest Updates</a>
     </div>
   </div>
 
