--- a/app/views/mangas/show.html.erb
+++ b/app/views/mangas/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
-<div class="manga-container">
+<div class="manga-container bg-transparent">
   <!-- Cover Manga -->
   <div class="manga-cover">
     <% if @manga.image_cover.present? %>
@@ -19,7 +19,6 @@
     <p class="manga-info"><strong>Rating:</strong> ⭐ <%= @manga.rating %>/10</p>
     <p class="manga-info"><strong>Created Date:</strong> <%= @manga.created_at.strftime("%d %B %Y") %></p>
     <p class="manga-info"><strong>Genre:</strong> <%= @manga.genre %></p>
-
     <!-- Tombol Aksi -->
     <div class="manga-actions">
       <button class="button">Bookmark</button>
@@ -32,18 +31,27 @@
   </div>
 </div>
 
+
+<div class="box bg-transparent">
+<div class="article">
+
+    <h1 class="manga-info"><strong>synopsis</strong></h1>
+    <p><%= @manga.synopsis %></p>
+</div>
+</div>
+
 <!-- Chapter List -->
 <div class="chapter-list">
   <h2>📖 Chapters</h2>
   <ul>
-    <% @manga.chapters.each do |chapter| %>
+    <% @chapters.each do |chapter| %>
       <li>
         <%= link_to "Chapter #{chapter.chapter_number}", manga_chapter_path(@manga.title, chapter.chapter_number) %>
       </li>
     <% end %>
   </ul>
 </div>
-</div>
+
 
 
 <style>
@@ -52,7 +60,6 @@
   grid-template-columns: 250px 1fr;
   gap: 20px;
   padding: 20px;
-  background: #1e1e1e;
   color: #fff;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
